--- a/src/app/features/bio/bio.component.html
+++ b/src/app/features/bio/bio.component.html
@@ -1,1 +1,85 @@
-<p>bio works!</p>
+<section>
+  <h1>Certificates</h1>
+  <div class="projects">
+    <div  class="pdf-on-side">
+        <embed src="assets/Javascript certificate.pdf"/>
+      <div class="description">
+        <h2>
+          <a
+            href="https://www.credly.com/badges/89227e07-06fb-41fe-9c09-6fac622474a6/linked_in_profile"
+            target="_blank"
+            >IT Specialist - JavaScript</a
+          >
+        </h2>
+        <p class="note">
+          <span>For:</span> <br />
+          Earners of this badge demonstrate that they can recognize, write, and
+          debug JavaScript code that will logically solve a problem.
+        </p>
+      </div>
+    </div>
+    <div class="pdf-on-side">
+        <embed src="assets/html and css.pdf"/>
+      <div class="description">
+        <h2>
+          <a
+            href="https://www.credly.com/badges/6543e5a9-d04c-4621-97f6-aa5f1fc21591/linked_in_profile"
+            target="_blank"
+            >IT Specialist - HTML and CSS</a
+          >
+        </h2>
+        <p class="note">
+          <span>For:</span> <br />
+          Earners for this badge demonstrate that they can structure a webpage
+          using HTML elements and create and apply styles using CSS.
+        </p>
+      </div>
+    </div>
+    <div  class="pdf-on-side">
+        <embed src="assets/Lela Akiashvili.pdf"/>
+      <div class="description">
+        <h2>
+          <a href="assets/Lela Akiashvili.pdf" target="_blank"
+            >Quantori Academy - JavaScript Bootcamp</a
+          >
+        </h2>
+        <p class="note">
+          <span>For:</span> <br />
+          Successfully completing the JavaScript Bootcamp, held from September
+          11, 2024, to December 12, 2024, and contributing to the development of
+          a Laboratory Inventory Management System as part of a team.
+        </p>
+      </div>
+    </div>
+    <div class="pdf-on-side">
+        <embed src="assets/ლელა აქიაშვილი.pdf"/>
+      <div class="description">
+        <h2>
+          <a href="assets/ლელა აქიაშვილი.pdf" target="_blank"
+            >It Step Academy - Front-End development</a
+          >
+        </h2>
+        <p class="note">
+          <span>For:</span> <br />
+          Successfully completing the 2023-2024 Front-end Development course
+          specializing in the Angular framework and JavaScript language.
+        </p>
+      </div>
+    </div>
+    <div class="pdf-on-side">
+      <embed src="assets/certificate-Adobe.pdf" />
+      <div class="description">
+        <h2>
+          <a href="assets/certificate-Adobe.pdf" target="_blank"
+            >It Step Academy - Adobe Pro Illustrator</a
+          >
+        </h2>
+        <p class="note">
+          <span>For:</span> <br />
+          Successfully completing Adobe Pro Illustrator course in the
+          September-December 2024.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
