--- a/src/app/features/bio/bio.component.html
+++ b/src/app/features/bio/bio.component.html
@@ -1,8 +1,8 @@
 <section>
   <h1>Certificates</h1>
   <div class="projects">
-    <div  class="pdf-on-side">
-        <embed src="assets/Javascript certificate.pdf"/>
+    <div class="pdf-on-side">
+      <img src="assets/Javascript.webp" class="certificate" />
       <div class="description">
         <h2>
           <a
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="pdf-on-side">
-        <embed src="assets/html and css.pdf"/>
+      <img src="assets/html and css.webp"  class="certificate"/>
       <div class="description">
         <h2>
           <a
@@ -35,8 +35,8 @@
         </p>
       </div>
     </div>
-    <div  class="pdf-on-side">
-        <embed src="assets/Lela Akiashvili.pdf"/>
+    <div class="pdf-on-side">
+      <img src="assets/Lela Akiashvili.webp"  class="certificate"/>
       <div class="description">
         <h2>
           <a href="assets/Lela Akiashvili.pdf" target="_blank"
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="pdf-on-side">
-        <embed src="assets/ლელა აქიაშვილი.pdf"/>
+      <img src="assets/ლელა აქიაშვილი.webp"  class="certificate"/>
       <div class="description">
         <h2>
           <a href="assets/ლელა აქიაშვილი.pdf" target="_blank"
@@ -67,7 +67,7 @@
       </div>
     </div>
     <div class="pdf-on-side">
-      <embed src="assets/certificate-Adobe.pdf" />
+      <img src="assets/certificate-Adobe.webp" alt=""  class="certificate"/>
       <div class="description">
         <h2>
           <a href="assets/certificate-Adobe.pdf" target="_blank"
